# VSLike-cpp

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  main.h
src/common/: bg.cpp  bg.h  bound.h  button.cpp  button.h  objectCenter.h  text.cpp  text.h  transform.h  uniVector.h
src/ecs/: CMakeLists.txt
src/game/: bouleDeFeu.cpp  bouleDeFeu.h  game.cpp  game.h  player.cpp  player.h
src/menu/: menu.cpp  menu.h
